--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MIAW AUGG STORE</title>
+    <title>KANTIN MODERN.</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rethink+Sans:ital,wght@0,400;0,700;1,500&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://unpkg.com/feather-icons"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style type="text/tailwindcss">
@@ -27,10 +27,7 @@
         <a href="#" class="navbar-logo">KANTIN<span> MODERN.</span></a>
 
         <div class="navbar-nav">
-            <!-- <a href="#home"></a>
-            <a href="#contact">TENTANG</a>
-            <a href="">KONTAK</a> -->
-            <a href=<>DAFTAR SEKARANG</a>
+            <a href="register.html">DAFTAR SEKARANG</a>
         </div>
     </nav>
 
@@ -163,43 +160,12 @@
                     <div class="w-full text-5xl font-bold">
                         <h1 class="w-full ">Mari Lebih Dekat Dengan Kami</h1>
                     </div>
-                    <div class="flex mt-8  md:justify-between">
+                    <div class="flex mt-1  md:justify-between">
                         <p class="w-full md:w-2/3 text-gray-400"></p>
-                        <div class="w-44 pt-6 md:pt-0">
-
-
-
-                        </div>
+                        <div class="w-44 pt-6 md:pt-0"></div>
                     </div>
                     <div class="p-10">
-                        <!-- Card 1
-                        <div class=" w-full lg:max-w-full lg:flex">
-                            <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden"
-                                style="background-image: url('qinthar.jpg')" title="Mountain">
-                            </div>
-                            <div
-                                class="border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
-                                <div class="mb-8">
-                                    <p class="text-sm text-gray-600 flex items-center">
-
-                                    </p>
-                                    <div class="text-gray-900 font-bold text-xl mb-2">Muhammad Qinthar</div>
-                                    <p class="text-gray-700 text-base">Saya Muhammad Qinthar, Saya Sedang Melanjutkan
-                                        Jenjang D4 Teknik Informatika, Di Universitas Logistik & Bisnis international.
-                                        Asal saya Dari Kota Garut, Jawa barat. Hobi saya bermain Futsal dan Menyanyi</p>
-                                </div>
-                                <div class="flex items-center">
-                                    <div class="text-sm">
-                                        <p class="text-gray-900 leading-none">President Director</p>
-                                        <p class="text-gray-600"></p>
-                                        <div class="text-sm">
-                                            <p class="text-gray-900 leading-none"></p>
-                                            <p class="text-gray-600"></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
+                        
 
                         <div class="p-10">
                             <!--Card 1-->
@@ -228,7 +194,7 @@
                         </div>
                         <div class=" w-full lg:max-w-full lg:flex">
                             <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden"
-                                style="background-image: url('qinthar.jpg')" title="Mountain">
+                                style="background-image: url('jpg/qinthar.jpg')" title="Mountain">
                             </div>
                             <div
                                 class="border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
@@ -263,7 +229,7 @@
                                     <p class="mx-auto mt-4 max-w-sm text-gray-500">
                                     </p>
 
-                                    <a href="{{route('register')}}"
+                                    <a href="register.html"
                                         class="mt-8 inline-block rounded-full border border-indigo-600 px-12 py-3 text-sm font-medium text-indigo-600 hover:bg-indigo-600 hover:text-white focus:outline-none focus:ring active:bg-indigo-500">
                                         Get Started
                                     </a>
