--- a/ui/login.html
+++ b/ui/login.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="{{ asset('img/fav.png') }}" type="image/x-icon">
     <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.12.1/css/pro.min.css">
     <link rel="stylesheet" type="text/css" href="{{ asset('css/style.css') }}">
-    <title>Welcome To Cleopatra</title>
+    <title>login.</title>
     <!-- Tambahkan link CSS atau script JavaScript yang dibutuhkan di sini -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
   <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0" >
       <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-dark">
           <img class="w-8 h-8 mr-2" src="https://images.tokopedia.net/img/cache/500-square/product-1/2018/12/11/1470206/1470206_691eeaec-31fb-4f17-99a8-6c0b86453581_800_800.jpg" alt="logo">
-          KANTIN KAMPOES.
+          KANTIN MODERN.
       </a>
       <div class="w-full bg-dark rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-dark-800 dark:border-dark-700">
           <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
@@ -50,11 +50,11 @@
                   <div class="flex items-center justify-between">
                   <button type="submit" a href="" class="w-full text-black bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Sign in</button>
                   <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-                      Belum Mempunyai Akun? <a href="{{route('register')}}" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Register Disini</a>
+                      Belum Mempunyai Akun? <a href="register.html" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Register Disini</a>
                   </p>
               </form>
           </div>
       </div>
   </div>
-</body>
+</body> 
 </html>
