--- a/ui/register.html
+++ b/ui/register.html
@@ -7,12 +7,11 @@
     <link rel="shortcut icon" href="{{ asset('img/fav.png') }}" type="image/x-icon">
     <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.12.1/css/pro.min.css">
     <link rel="stylesheet" type="text/css" href="{{ asset('css/style.css') }}">
-    <title>Welcome To Cleopatra</title>
+    <title>register.</title>
     <!-- Tambahkan link CSS atau script JavaScript yang dibutuhkan di sini -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rethink+Sans:ital,wght@0,400;0,700;1,500&display=swap" rel="stylesheet">
-   
     <script src="https://unpkg.com/feather-icons"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style type="text/tailwindcss">
@@ -28,11 +27,7 @@
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-dark md:text-5xl lg:text-6xl">Kantin Sehat Hidup Sehat</h1>
         <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
 <section class="bg-gray-50 dark:bg-gray-900">
-  <!-- <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-      <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
-          <img class="w-8 h-8 mr-2" src="https://images.tokopedia.net/img/cache/500-square/product-1/2018/12/11/1470206/1470206_691eeaec-31fb-4f17-99a8-6c0b86453581_800_800.jpg" alt="logo">
-          KANTIN KAMPOES.
-      </a> -->
+
       <div class="w-full bg-dark rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-dark-800 dark:border-dark-700">
           <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
               <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
@@ -62,7 +57,7 @@
                   </div>
               </form>
               <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-                  Sudah Mempunyai Akun? <a href="{{route('login')}}" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Login Disini</a>
+                  Sudah Mempunyai Akun? <a href="login.html" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Login Disini</a>
               </p>
           </div>
       </div>
