--- a/ui/index.html
+++ b/ui/index.html
@@ -158,7 +158,7 @@
             <div class="w-full  flex items-center justify-center bg-black">
                 <div class="md:w-2/3 w-full px-4 text-white ">
                     <div class="w-full text-5xl font-bold">
-                        <h1 class="w-full ">Mari Lebih Dekat Dengan Kami</h1>
+                        <h1 class="w-full ">Mari Lebih Dekat Dengan Kami.</h1>
                     </div>
                     <div class="flex mt-1  md:justify-between">
                         <p class="w-full md:w-2/3 text-gray-400"></p>
